--- a/less/custom.less
+++ b/less/custom.less
@@ -15,8 +15,8 @@
  //   border: 1px solid red;
 }
 
-.air-qual-box { padding: 35px 5px 5px 20px; width: 50%; float: left; margin-bottom: 10px;}
-.air-qual-value { font-size: 30px; left: 40%; position: relative; top: -35px; }
+.air-qual-box { padding: 35px 5px 5px 10px; width: 95%; float: left; margin-bottom: 10px;}
+.air-qual-value { font-size: 30px; left: 45%; position: relative; top: -35px; }
 .air-qual-gradient {
     width: 90%;
     height: 25px;
@@ -59,6 +59,8 @@ background: -moz-linear-gradient(left, #37B726 0%, #EAE844 50%, #D82F2F 100%);
 .humidity { color: @blue; }
 .co2 { color: @purple; padding-top: 1px;}
 .average { display: block;}
+
+.trend-box { clear: both; float: right; margin-bottom: 12px; border: 1px solid red;}
 
 .graph {
 
