--- a/less/responsive-768px-979px.less
+++ b/less/responsive-768px-979px.less
@@ -38,6 +38,8 @@
 .average:before {
     content: " ";
 }
+.graph-controls .filter-label { display: block;}
+.graph-controls .filter-label:last-child { padding-top: 10px; .btn-group {margin-left: 16px;}}
   // No need to reset .thumbnails here since it's the same @gridGutterWidth
 
 }
